Ensure that images don't overflow to the side of the page on small screens

--- a/content/themes/feminismindia/assets/css/custom.css
+++ b/content/themes/feminismindia/assets/css/custom.css
@@ -174,6 +174,7 @@ aside.read-next {
 }
 
 .entry-media > img {
+    max-width: 100%;
     object-fit: cover;
     max-height: 310px;
 }
